--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.6.1"
+    "mongoose": "^7.6.1",
+    "ws": "^8.15.1"
   }
 }
